[package]
name = "benchy"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["http2", "http3", "rustls-tls"], default-features = false }
futures = "0.3"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
